--- a/challenges/projects/posts-challenge/src/components/CommentPostForm/CommentPostForm.css
+++ b/challenges/projects/posts-challenge/src/components/CommentPostForm/CommentPostForm.css
@@ -77,7 +77,7 @@
   flex-direction: row;
   justify-content: space-between;
   width: 100%;
-  padding: 0.5rem 1rem;
+  padding: 0.5rem 0.5rem 0.5rem 1rem;
 }
 
 .commentor-info input {
@@ -114,7 +114,6 @@
 
 .commentor-info.input {
   flex-direction: column;
-  padding-right: 1rem;
   width: 99%;
 }
 
